Fixed gallery on mobile, tablet and desktop views.

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@ header{
   color: #f1f227;
   padding:10px;
 }
+
+footer{
+  background-color: #a161dd;
+  color: #f1f227;
+  grid-column: 1 / -1;
+  grid-row: 7 / 8;
+  padding-top: 30px;
+  text-align: center;
+}
+
 h1{
   font-size: 2em;
   text-align: center;
@@ -30,7 +40,7 @@ h1{
 
 h2{
   font-size: 1.5em;
-  text-align: center;
+  text-align: right;
 }
 
 .skip a{
@@ -61,19 +71,18 @@ nav {
   display: flex;
   align-items: center;
   height: 75px;
-  background-color: light-purple;
   overflow: hidden;
 }
-nav .container {
-  display: flex;
-  list-style: none;
+.container {
+  display: grid;
+  grid-template-columns: 25;
   align-items: center;
   justify-content: space-between;
   width: 100%;
 }
 
 .flex-container{
-    display: -webkit-box; /* for Safari */
+    display: -webkit-box; /*Safari help*/
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
@@ -82,7 +91,7 @@ nav .container {
       justify-content:space-between;
     -webkit-box-align: center;
     align-items: center;
-    grid-template-columns: 100px 500px 100px;
+    grid-template-columns: 15% 70% 15%;
     grid-column: 2 / span 1;
   }
 
@@ -139,15 +148,32 @@ nav .container {
     grid-column: 1/span 1;
     grid-row: 1/span 1;
   }
-.gallery-flex{
-  display:flex;
-  flex-direction: column;
+.gallery{
+  flex: 1;
+  padding: 1.5em;
+  flex-flow: column wrap;
+  margin-left: -8px;
+  width: 100%;
   column-gap: 10px;
   }
-.gallery-flex img{
-    display: inline-block;
-    margin: 0 0 1em;
-    max-width: 75vw;
+.gallery-item{
+  max-height: 20vw;
+  display: inline-block;
+  width: auto;
+  margin: 0 8px 8px 0;
+  }
+.gallery-item img{
+  max-width: 100%;
+  height:auto;
+  object-fit: contain;
+  overflow: hidden;
+  }
+.gallery-item{
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
+  transition: filter .25s ease-in-out;
+  }
+.gallery-item: hover{
+  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
   }
 .project-grid{
   display: grid;
@@ -171,7 +197,6 @@ nav .container {
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
   grid-row-gap: 10px;
-
   grid-template-rows: 30px auto auto auto auto auto 100px;
   width: 100vw;
 }
@@ -182,38 +207,27 @@ nav .container {
     flex-direction: row;
     justify-content: space-around;
   }
-
-  }
-  .gallery-flex{
+  .gallery{
+    padding: 1.5em;
     columns: 2;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    object-fit: contain;
+    overflow: hidden;
   }
-  .gallery-flex img{
-    max-width: 47vw;
-  }
-  nav ul{
-    flex-direction: row;
-  }
-
 }
 
 
 @media only screen and (min-width: 900px) {
 
-  .gallery-flex {
+  .gallery {
     columns: 3;
+    padding: 1.5em;
   }
-
-  .gallery-flex img{
-      max-width: 30vw;
-    }
 
   .container{
     grid-template-rows: 70px 150px 400px 400px 400px 400px 100px;
     grid-template-columns: 50px auto 500px auto 50px;
   }
+}
 
 
   @media screen and (prefers-reduced-motion: reduce){
